# garmin_training_agent_manage

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  safe_garmin.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: Home.md  Pace-Targets-Reference.md  SafeGarmin-Reference.md
examples/: basic_usage.py  usage.md
garmin_training_agent_manage/: __init__.py  __main__.py  safe_garmin.py
references/: garmin-target-type-ids.md  interval-track-workout.json  mobile-integration.md
tests/: test_safe_garmin.py
