[project]
name = "garmin-training-agent-manage"
version = "1.0.0"
description = "SafeGarmin wrapper and comprehensive guide for pushing structured training plans to Garmin Connect via the garminconnect Python library"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "M Y" },
]
dependencies = [
    "garminconnect>=0.3.3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://github.com/nkyang10/garmin_training_agent_manage"
Repository = "https://github.com/nkyang10/garmin_training_agent_manage"
Issues = "https://github.com/nkyang10/garmin_training_agent_manage/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
